@@ -11,8 +11,6 @@
 package org.junit.platform.engine.discovery;
 
 import static java.lang.String.join;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singleton;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -35,9 +33,8 @@ import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -64,9 +61,9 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectUri("   "));
 		assertViolatesPrecondition(() -> selectUri("foo:"));
 
-		String uri = "https://junit.org";
+		var uri = "https://junit.org";
 
-		UriSelector selector = selectUri(uri);
+		var selector = selectUri(uri);
 		assertEquals(uri, selector.getUri().toString());
 	}
 
@@ -75,9 +72,9 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectUri((URI) null));
 		assertViolatesPrecondition(() -> selectUri("   "));
 
-		URI uri = new URI("https://junit.org");
+		var uri = new URI("https://junit.org");
 
-		UriSelector selector = selectUri(uri);
+		var selector = selectUri(uri);
 		assertEquals(uri, selector.getUri());
 	}
 
@@ -86,12 +83,27 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectFile((String) null));
 		assertViolatesPrecondition(() -> selectFile("   "));
 
-		String path = "src/test/resources/do_not_delete_me.txt";
+		var path = "src/test/resources/do_not_delete_me.txt";
 
-		FileSelector selector = selectFile(path);
+		var selector = selectFile(path);
 		assertEquals(path, selector.getRawPath());
 		assertEquals(new File(path), selector.getFile());
 		assertEquals(Paths.get(path), selector.getPath());
+	}
+
+	@Test
+	void selectFileByNameAndPosition() {
+		var filePosition = FilePosition.from(12, 34);
+		assertViolatesPrecondition(() -> selectFile((String) null, filePosition));
+		assertViolatesPrecondition(() -> selectFile("   ", filePosition));
+
+		var path = "src/test/resources/do_not_delete_me.txt";
+
+		var selector = selectFile(path, filePosition);
+		assertEquals(path, selector.getRawPath());
+		assertEquals(new File(path), selector.getFile());
+		assertEquals(Paths.get(path), selector.getPath());
+		assertEquals(filePosition, selector.getPosition().get());
 	}
 
 	@Test
@@ -99,15 +111,33 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectFile((File) null));
 		assertViolatesPrecondition(() -> selectFile(new File("bogus/nonexistent.txt")));
 
-		File currentDir = new File(".").getCanonicalFile();
-		File relativeDir = new File("..", currentDir.getName());
-		File file = new File(relativeDir, "src/test/resources/do_not_delete_me.txt");
-		String path = file.getCanonicalFile().getPath();
+		var currentDir = new File(".").getCanonicalFile();
+		var relativeDir = new File("..", currentDir.getName());
+		var file = new File(relativeDir, "src/test/resources/do_not_delete_me.txt");
+		var path = file.getCanonicalFile().getPath();
 
-		FileSelector selector = selectFile(file);
+		var selector = selectFile(file);
 		assertEquals(path, selector.getRawPath());
 		assertEquals(file.getCanonicalFile(), selector.getFile());
 		assertEquals(Paths.get(path), selector.getPath());
+	}
+
+	@Test
+	void selectFileByFileReferenceAndPosition() throws Exception {
+		var filePosition = FilePosition.from(12, 34);
+		assertViolatesPrecondition(() -> selectFile((File) null, filePosition));
+		assertViolatesPrecondition(() -> selectFile(new File("bogus/nonexistent.txt"), filePosition));
+
+		var currentDir = new File(".").getCanonicalFile();
+		var relativeDir = new File("..", currentDir.getName());
+		var file = new File(relativeDir, "src/test/resources/do_not_delete_me.txt");
+		var path = file.getCanonicalFile().getPath();
+
+		var selector = selectFile(file, filePosition);
+		assertEquals(path, selector.getRawPath());
+		assertEquals(file.getCanonicalFile(), selector.getFile());
+		assertEquals(Paths.get(path), selector.getPath());
+		assertEquals(FilePosition.from(12, 34), selector.getPosition().get());
 	}
 
 	@Test
@@ -115,9 +145,9 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectDirectory((String) null));
 		assertViolatesPrecondition(() -> selectDirectory("   "));
 
-		String path = "src/test/resources";
+		var path = "src/test/resources";
 
-		DirectorySelector selector = selectDirectory(path);
+		var selector = selectDirectory(path);
 		assertEquals(path, selector.getRawPath());
 		assertEquals(new File(path), selector.getDirectory());
 		assertEquals(Paths.get(path), selector.getPath());
@@ -128,12 +158,12 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectDirectory((File) null));
 		assertViolatesPrecondition(() -> selectDirectory(new File("bogus/nonexistent")));
 
-		File currentDir = new File(".").getCanonicalFile();
-		File relativeDir = new File("..", currentDir.getName());
-		File directory = new File(relativeDir, "src/test/resources");
-		String path = directory.getCanonicalFile().getPath();
+		var currentDir = new File(".").getCanonicalFile();
+		var relativeDir = new File("..", currentDir.getName());
+		var directory = new File(relativeDir, "src/test/resources");
+		var path = directory.getCanonicalFile().getPath();
 
-		DirectorySelector selector = selectDirectory(directory);
+		var selector = selectDirectory(directory);
 		assertEquals(path, selector.getRawPath());
 		assertEquals(directory.getCanonicalFile(), selector.getDirectory());
 		assertEquals(Paths.get(path), selector.getPath());
@@ -147,7 +177,7 @@ class DiscoverySelectorsTests {
 		assertViolatesPrecondition(() -> selectClasspathResource("\t"));
 
 		// with unnecessary "/" prefix
-		ClasspathResourceSelector selector = selectClasspathResource("/foo/bar/spec.xml");
+		var selector = selectClasspathResource("/foo/bar/spec.xml");
 		assertEquals("foo/bar/spec.xml", selector.getClasspathResourceName());
 
 		// standard use case
@@ -156,8 +186,27 @@ class DiscoverySelectorsTests {
 	}
 
 	@Test
+	void selectClasspathResourcesWithFilePosition() {
+		var filePosition = FilePosition.from(12, 34);
+		assertViolatesPrecondition(() -> selectClasspathResource(null, filePosition));
+		assertViolatesPrecondition(() -> selectClasspathResource("", filePosition));
+		assertViolatesPrecondition(() -> selectClasspathResource("    ", filePosition));
+		assertViolatesPrecondition(() -> selectClasspathResource("\t", filePosition));
+
+		// with unnecessary "/" prefix
+		var selector = selectClasspathResource("/foo/bar/spec.xml", filePosition);
+		assertEquals("foo/bar/spec.xml", selector.getClasspathResourceName());
+		assertEquals(FilePosition.from(12, 34), selector.getPosition().get());
+
+		// standard use case
+		selector = selectClasspathResource("A/B/C/spec.json", filePosition);
+		assertEquals("A/B/C/spec.json", selector.getClasspathResourceName());
+		assertEquals(filePosition, selector.getPosition().get());
+	}
+
+	@Test
 	void selectModuleByName() {
-		ModuleSelector selector = selectModule("java.base");
+		var selector = selectModule("java.base");
 		assertEquals("java.base", selector.getModuleName());
 	}
 
@@ -170,26 +219,26 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectModulesByNames() {
-		List<ModuleSelector> selectors = selectModules(new HashSet<>(Arrays.asList("a", "b")));
-		List<String> names = selectors.stream().map(ModuleSelector::getModuleName).collect(Collectors.toList());
+		var selectors = selectModules(Set.of("a", "b"));
+		var names = selectors.stream().map(ModuleSelector::getModuleName).collect(Collectors.toList());
 		assertThat(names).containsExactlyInAnyOrder("b", "a");
 	}
 
 	@Test
 	void selectModulesByNamesPreconditions() {
 		assertViolatesPrecondition(() -> selectModules(null));
-		assertViolatesPrecondition(() -> selectModules(new HashSet<>(Arrays.asList("a", " "))));
+		assertViolatesPrecondition(() -> selectModules(Set.of("a", " ")));
 	}
 
 	@Test
 	void selectPackageByName() {
-		PackageSelector selector = selectPackage(getClass().getPackage().getName());
+		var selector = selectPackage(getClass().getPackage().getName());
 		assertEquals(getClass().getPackage().getName(), selector.getPackageName());
 	}
 
 	@Test
 	void selectClassByName() {
-		ClassSelector selector = selectClass(getClass().getName());
+		var selector = selectClass(getClass().getName());
 		assertEquals(getClass(), selector.getJavaClass());
 	}
 
@@ -235,7 +284,7 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectMethodByClassAndMethodPreconditions() {
-		Method method = getClass().getDeclaredMethods()[0];
+		var method = getClass().getDeclaredMethods()[0];
 		assertViolatesPrecondition(() -> selectMethod(null, method));
 		assertViolatesPrecondition(() -> selectMethod(getClass(), (Method) null));
 	}
@@ -267,94 +316,94 @@ class DiscoverySelectorsTests {
 	@Test
 	void selectMethodByFullyQualifiedName() throws Exception {
 		Class<?> clazz = getClass();
-		Method method = clazz.getDeclaredMethod("myTest");
+		var method = clazz.getDeclaredMethod("myTest");
 		assertSelectMethodByFullyQualifiedName(clazz, method);
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameForDefaultMethodInInterface() throws Exception {
 		Class<?> clazz = TestCaseWithDefaultMethod.class;
-		Method method = clazz.getMethod("myTest");
+		var method = clazz.getMethod("myTest");
 		assertSelectMethodByFullyQualifiedName(clazz, method);
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithPrimitiveParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int.class);
+		var method = getClass().getDeclaredMethod("myTest", int.class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, int.class, "int");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithPrimitiveParameterUsingSourceCodeSyntax() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int.class);
+		var method = getClass().getDeclaredMethod("myTest", int.class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "int", "int");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithObjectParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String.class);
+		var method = getClass().getDeclaredMethod("myTest", String.class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, String.class, String.class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithObjectParameterUsingSourceCodeSyntax() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String.class);
+		var method = getClass().getDeclaredMethod("myTest", String.class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "java.lang.String", String.class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithPrimitiveArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int[].class);
+		var method = getClass().getDeclaredMethod("myTest", int[].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, int[].class, int[].class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithPrimitiveArrayParameterUsingSourceCodeSyntax() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int[].class);
+		var method = getClass().getDeclaredMethod("myTest", int[].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "int[]", "int[]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithObjectArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String[].class);
+		var method = getClass().getDeclaredMethod("myTest", String[].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, String[].class, String[].class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithObjectArrayParameterUsingSourceCodeSyntax() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String[].class);
+		var method = getClass().getDeclaredMethod("myTest", String[].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "java.lang.String[]", "java.lang.String[]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithTwoDimensionalPrimitiveArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int[][].class);
+		var method = getClass().getDeclaredMethod("myTest", int[][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, int[][].class, int[][].class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithTwoDimensionalPrimitiveArrayParameterUsingSourceCodeSyntax()
 			throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int[][].class);
+		var method = getClass().getDeclaredMethod("myTest", int[][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "int[][]", "int[][]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithTwoDimensionalObjectArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String[][].class);
+		var method = getClass().getDeclaredMethod("myTest", String[][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, String[][].class, String[][].class.getName());
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithTwoDimensionalObjectArrayParameterUsingSourceCodeSyntax()
 			throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String[][].class);
+		var method = getClass().getDeclaredMethod("myTest", String[][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "java.lang.String[][]", "java.lang.String[][]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithMultidimensionalPrimitiveArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", int[][][][][].class);
+		var method = getClass().getDeclaredMethod("myTest", int[][][][][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, int[][][][][].class, int[][][][][].class.getName());
 	}
 
@@ -362,13 +411,13 @@ class DiscoverySelectorsTests {
 	void selectMethodByFullyQualifiedNameWithMultidimensionalPrimitiveArrayParameterUsingSourceCodeSyntax()
 			throws Exception {
 
-		Method method = getClass().getDeclaredMethod("myTest", int[][][][][].class);
+		var method = getClass().getDeclaredMethod("myTest", int[][][][][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "int[][][][][]", "int[][][][][]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameWithMultidimensionalObjectArrayParameter() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", Double[][][][][].class);
+		var method = getClass().getDeclaredMethod("myTest", Double[][][][][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, Double[][][][][].class,
 			Double[][][][][].class.getName());
 	}
@@ -377,21 +426,21 @@ class DiscoverySelectorsTests {
 	void selectMethodByFullyQualifiedNameWithMultidimensionalObjectArrayParameterUsingSourceCodeSyntax()
 			throws Exception {
 
-		Method method = getClass().getDeclaredMethod("myTest", Double[][][][][].class);
+		var method = getClass().getDeclaredMethod("myTest", Double[][][][][].class);
 		assertSelectMethodByFullyQualifiedName(getClass(), method, "java.lang.Double[][][][][]",
 			"java.lang.Double[][][][][]");
 	}
 
 	@Test
 	void selectMethodByFullyQualifiedNameEndingInOpeningParenthesis() {
-		String className = "org.example.MyClass";
+		var className = "org.example.MyClass";
 		// The following bizarre method name is not permissible in Java source
 		// code; however, it's permitted by the JVM -- for example, in Groovy
 		// or Kotlin source code using back ticks.
-		String methodName = ")--(";
-		String fqmn = className + "#" + methodName;
+		var methodName = ")--(";
+		var fqmn = className + "#" + methodName;
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
 		assertEquals("", selector.getMethodParameterTypes());
@@ -402,11 +451,11 @@ class DiscoverySelectorsTests {
 	 */
 	@Test
 	void selectMethodByFullyQualifiedNameContainingHashtags() {
-		String className = "org.example.CalculatorSpec";
-		String methodName = "#a plus #b equals #c";
-		String fqmn = className + "#" + methodName;
+		var className = "org.example.CalculatorSpec";
+		var methodName = "#a plus #b equals #c";
+		var fqmn = className + "#" + methodName;
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
 		assertEquals("", selector.getMethodParameterTypes());
@@ -417,12 +466,12 @@ class DiscoverySelectorsTests {
 	 */
 	@Test
 	void selectMethodByFullyQualifiedNameContainingHashtagsAndWithParameterList() {
-		String className = "org.example.CalculatorSpec";
-		String methodName = "#a plus #b equals #c";
-		String methodParameters = "int, int, int";
-		String fqmn = String.format("%s#%s(%s)", className, methodName, methodParameters);
+		var className = "org.example.CalculatorSpec";
+		var methodName = "#a plus #b equals #c";
+		var methodParameters = "int, int, int";
+		var fqmn = String.format("%s#%s(%s)", className, methodName, methodParameters);
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
 		assertEquals(methodParameters, selector.getMethodParameterTypes());
@@ -433,11 +482,11 @@ class DiscoverySelectorsTests {
 	 */
 	@Test
 	void selectMethodByFullyQualifiedNameContainingParentheses() {
-		String className = "org.example.KotlinTestCase";
-		String methodName = "🦆 ~|~test with a really, (really) terrible name & that needs to be changed!~|~";
-		String fqmn = className + "#" + methodName;
+		var className = "org.example.KotlinTestCase";
+		var methodName = "🦆 ~|~test with a really, (really) terrible name & that needs to be changed!~|~";
+		var fqmn = className + "#" + methodName;
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
@@ -449,11 +498,11 @@ class DiscoverySelectorsTests {
 	 */
 	@Test
 	void selectMethodByFullyQualifiedNameEndingWithParentheses() {
-		String className = "org.example.KotlinTestCase";
-		String methodName = "test name ends with parentheses()";
-		String fqmn = className + "#" + methodName + "()";
+		var className = "org.example.KotlinTestCase";
+		var methodName = "test name ends with parentheses()";
+		var fqmn = className + "#" + methodName + "()";
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
@@ -465,12 +514,12 @@ class DiscoverySelectorsTests {
 	 */
 	@Test
 	void selectMethodByFullyQualifiedNameEndingWithParenthesesAndWithParameterList() {
-		String className = "org.example.KotlinTestCase";
-		String methodName = "test name ends with parentheses()";
-		String methodParameters = "int, int, int";
-		String fqmn = String.format("%s#%s(%s)", className, methodName, methodParameters);
+		var className = "org.example.KotlinTestCase";
+		var methodName = "test name ends with parentheses()";
+		var methodParameters = "int, int, int";
+		var fqmn = String.format("%s#%s(%s)", className, methodName, methodParameters);
 
-		MethodSelector selector = selectMethod(fqmn);
+		var selector = selectMethod(fqmn);
 
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
@@ -478,7 +527,7 @@ class DiscoverySelectorsTests {
 	}
 
 	private void assertSelectMethodByFullyQualifiedName(Class<?> clazz, Method method) {
-		MethodSelector selector = selectMethod(fqmn(clazz, method.getName()));
+		var selector = selectMethod(fqmn(clazz, method.getName()));
 		assertEquals(method, selector.getJavaMethod());
 		assertEquals(clazz, selector.getJavaClass());
 		assertEquals(clazz.getName(), selector.getClassName());
@@ -489,7 +538,7 @@ class DiscoverySelectorsTests {
 	private void assertSelectMethodByFullyQualifiedName(Class<?> clazz, Method method, Class<?> parameterType,
 			String expectedParameterTypes) {
 
-		MethodSelector selector = selectMethod(fqmn(parameterType));
+		var selector = selectMethod(fqmn(parameterType));
 		assertEquals(method, selector.getJavaMethod());
 		assertEquals(clazz, selector.getJavaClass());
 		assertEquals(clazz.getName(), selector.getClassName());
@@ -500,7 +549,7 @@ class DiscoverySelectorsTests {
 	private void assertSelectMethodByFullyQualifiedName(Class<?> clazz, Method method, String parameterName,
 			String expectedParameterTypes) {
 
-		MethodSelector selector = selectMethod(fqmnWithParamNames(parameterName));
+		var selector = selectMethod(fqmnWithParamNames(parameterName));
 		assertEquals(method, selector.getJavaMethod());
 		assertEquals(clazz, selector.getJavaClass());
 		assertEquals(clazz.getName(), selector.getClassName());
@@ -510,9 +559,9 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectMethodByClassAndMethodName() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest");
+		var method = getClass().getDeclaredMethod("myTest");
 
-		MethodSelector selector = selectMethod(getClass(), "myTest");
+		var selector = selectMethod(getClass(), "myTest");
 		assertEquals(getClass(), selector.getJavaClass());
 		assertEquals(getClass().getName(), selector.getClassName());
 		assertEquals(method, selector.getJavaMethod());
@@ -522,9 +571,9 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectMethodByClassAndMethodNameWithParameterTypes() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String.class);
+		var method = getClass().getDeclaredMethod("myTest", String.class);
 
-		MethodSelector selector = selectMethod(getClass(), "myTest", String.class.getName());
+		var selector = selectMethod(getClass(), "myTest", String.class.getName());
 		assertEquals(getClass(), selector.getJavaClass());
 		assertEquals(getClass().getName(), selector.getClassName());
 		assertEquals(method, selector.getJavaMethod());
@@ -534,9 +583,9 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectMethodWithParametersByMethodReference() throws Exception {
-		Method method = getClass().getDeclaredMethod("myTest", String.class);
+		var method = getClass().getDeclaredMethod("myTest", String.class);
 
-		MethodSelector selector = selectMethod(getClass(), method);
+		var selector = selectMethod(getClass(), method);
 		assertEquals(method, selector.getJavaMethod());
 		assertEquals(getClass(), selector.getJavaClass());
 		assertEquals(getClass().getName(), selector.getClassName());
@@ -546,17 +595,17 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectClassByNameForSpockSpec() {
-		String className = "org.example.CalculatorSpec";
-		ClassSelector selector = selectClass(className);
+		var className = "org.example.CalculatorSpec";
+		var selector = selectClass(className);
 		assertEquals(className, selector.getClassName());
 	}
 
 	@Test
 	void selectMethodByClassAndNameForSpockSpec() {
-		String className = "org.example.CalculatorSpec";
-		String methodName = "#a plus #b equals #c";
+		var className = "org.example.CalculatorSpec";
+		var methodName = "#a plus #b equals #c";
 
-		MethodSelector selector = selectMethod(className, methodName);
+		var selector = selectMethod(className, methodName);
 		assertEquals(className, selector.getClassName());
 		assertEquals(methodName, selector.getMethodName());
 		assertEquals("", selector.getMethodParameterTypes());
@@ -564,31 +613,31 @@ class DiscoverySelectorsTests {
 
 	@Test
 	void selectClasspathRootsWithNonExistingDirectory() {
-		List<ClasspathRootSelector> selectors = selectClasspathRoots(singleton(Paths.get("some", "local", "path")));
+		var selectors = selectClasspathRoots(Set.of(Paths.get("some", "local", "path")));
 
 		assertThat(selectors).isEmpty();
 	}
 
 	@Test
 	void selectClasspathRootsWithNonExistingJarFile() {
-		List<ClasspathRootSelector> selectors = selectClasspathRoots(singleton(Paths.get("some.jar")));
+		var selectors = selectClasspathRoots(Set.of(Paths.get("some.jar")));
 
 		assertThat(selectors).isEmpty();
 	}
 
 	@Test
 	void selectClasspathRootsWithExistingDirectory(@TempDir Path tempDir) {
-		List<ClasspathRootSelector> selectors = selectClasspathRoots(singleton(tempDir));
+		var selectors = selectClasspathRoots(Set.of(tempDir));
 
 		assertThat(selectors).extracting(ClasspathRootSelector::getClasspathRoot).containsExactly(tempDir.toUri());
 	}
 
 	@Test
 	void selectClasspathRootsWithExistingJarFile() throws Exception {
-		URI jarUri = getClass().getResource("/jartest.jar").toURI();
-		Path jarFile = Paths.get(jarUri);
+		var jarUri = getClass().getResource("/jartest.jar").toURI();
+		var jarFile = Paths.get(jarUri);
 
-		List<ClasspathRootSelector> selectors = selectClasspathRoots(singleton(jarFile));
+		var selectors = selectClasspathRoots(Set.of(jarFile));
 
 		assertThat(selectors).extracting(ClasspathRootSelector::getClasspathRoot).containsExactly(jarUri);
 	}
@@ -603,7 +652,7 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectNestedClassByClassNames() {
-			NestedClassSelector selector = selectNestedClass(List.of(enclosingClassName), nestedClassName);
+			var selector = selectNestedClass(List.of(enclosingClassName), nestedClassName);
 
 			assertThat(selector.getEnclosingClasses()).containsOnly(ClassWithNestedInnerClass.class);
 			assertThat(selector.getNestedClass()).isEqualTo(AbstractClassWithNestedInnerClass.NestedClass.class);
@@ -614,8 +663,7 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectDoubleNestedClassByClassNames() {
-			NestedClassSelector selector = selectNestedClass(List.of(enclosingClassName, nestedClassName),
-				doubleNestedClassName);
+			var selector = selectNestedClass(List.of(enclosingClassName, nestedClassName), doubleNestedClassName);
 
 			assertThat(selector.getEnclosingClasses()).containsExactly(ClassWithNestedInnerClass.class,
 				AbstractClassWithNestedInnerClass.NestedClass.class);
@@ -629,7 +677,7 @@ class DiscoverySelectorsTests {
 		@Test
 		void selectNestedClassPreconditions() {
 			assertViolatesPrecondition(() -> selectNestedClass(null, "ClassName"));
-			assertViolatesPrecondition(() -> selectNestedClass(emptyList(), "ClassName"));
+			assertViolatesPrecondition(() -> selectNestedClass(List.of(), "ClassName"));
 			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), null));
 			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), ""));
 			assertViolatesPrecondition(() -> selectNestedClass(List.of("ClassName"), " "));
@@ -637,8 +685,7 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectNestedMethodByEnclosingClassNamesAndMethodName() throws Exception {
-			NestedMethodSelector selector = selectNestedMethod(List.of(enclosingClassName), nestedClassName,
-				methodName);
+			var selector = selectNestedMethod(List.of(enclosingClassName), nestedClassName, methodName);
 
 			assertThat(selector.getEnclosingClasses()).containsOnly(ClassWithNestedInnerClass.class);
 			assertThat(selector.getNestedClass()).isEqualTo(AbstractClassWithNestedInnerClass.NestedClass.class);
@@ -651,7 +698,7 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectNestedMethodByEnclosingClassesAndMethodName() throws Exception {
-			NestedMethodSelector selector = selectNestedMethod(List.of(ClassWithNestedInnerClass.class),
+			var selector = selectNestedMethod(List.of(ClassWithNestedInnerClass.class),
 				AbstractClassWithNestedInnerClass.NestedClass.class, methodName);
 
 			assertThat(selector.getEnclosingClasses()).containsOnly(ClassWithNestedInnerClass.class);
@@ -665,7 +712,7 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectNestedMethodByEnclosingClassNamesAndMethodNameWithParameterTypes() throws Exception {
-			NestedMethodSelector selector = selectNestedMethod(List.of(enclosingClassName), nestedClassName, methodName,
+			var selector = selectNestedMethod(List.of(enclosingClassName), nestedClassName, methodName,
 				String.class.getName());
 
 			assertThat(selector.getEnclosingClasses()).containsOnly(ClassWithNestedInnerClass.class);
@@ -680,9 +727,9 @@ class DiscoverySelectorsTests {
 
 		@Test
 		void selectDoubleNestedMethodByEnclosingClassNamesAndMethodName() throws Exception {
-			String doubleNestedMethodName = "doubleNestedTest";
-			NestedMethodSelector selector = selectNestedMethod(List.of(enclosingClassName, nestedClassName),
-				doubleNestedClassName, doubleNestedMethodName);
+			var doubleNestedMethodName = "doubleNestedTest";
+			var selector = selectNestedMethod(List.of(enclosingClassName, nestedClassName), doubleNestedClassName,
+				doubleNestedMethodName);
 
 			assertThat(selector.getEnclosingClasses()).containsExactly(ClassWithNestedInnerClass.class,
 				AbstractClassWithNestedInnerClass.NestedClass.class);
@@ -700,8 +747,8 @@ class DiscoverySelectorsTests {
 		void selectNestedMethodPreconditions() {
 			assertViolatesPrecondition(() -> selectNestedMethod(null, "ClassName", "methodName"));
 			assertViolatesPrecondition(() -> selectNestedMethod(null, "ClassName", "methodName", "int"));
-			assertViolatesPrecondition(() -> selectNestedMethod(emptyList(), "ClassName", "methodName"));
-			assertViolatesPrecondition(() -> selectNestedMethod(emptyList(), "ClassName", "methodName", "int"));
+			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), "ClassName", "methodName"));
+			assertViolatesPrecondition(() -> selectNestedMethod(List.of(), "ClassName", "methodName", "int"));
 			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), null, "methodName"));
 			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), null, "methodName", "int"));
 			assertViolatesPrecondition(() -> selectNestedMethod(List.of("ClassName"), " ", "methodName"));
