@@ -18,7 +18,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,7 +36,7 @@ import org.junit.platform.launcher.TestPlan;
 class SummaryGenerationTests {
 
 	private final SummaryGeneratingListener listener = new SummaryGeneratingListener();
-	private final TestPlan testPlan = TestPlan.from(Collections.emptyList());
+	private final TestPlan testPlan = TestPlan.from(List.of());
 
 	@Test
 	void emptyReport() {
@@ -46,7 +45,7 @@ class SummaryGenerationTests {
 
 		assertEquals(0, listener.getSummary().getTestsFailedCount());
 
-		String summaryString = summaryAsString();
+		var summaryString = summaryAsString();
 		assertAll("summary", //
 			() -> assertTrue(summaryString.contains("Test run finished after"), "test run"), //
 
@@ -70,15 +69,15 @@ class SummaryGenerationTests {
 
 	@Test
 	void reportingCorrectCounts() {
-		TestIdentifier successfulContainer = createContainerIdentifier("c1");
-		TestIdentifier failedContainer = createContainerIdentifier("c2");
-		TestIdentifier abortedContainer = createContainerIdentifier("c3");
-		TestIdentifier skippedContainer = createContainerIdentifier("c4");
+		var successfulContainer = createContainerIdentifier("c1");
+		var failedContainer = createContainerIdentifier("c2");
+		var abortedContainer = createContainerIdentifier("c3");
+		var skippedContainer = createContainerIdentifier("c4");
 
-		TestIdentifier successfulTest = createTestIdentifier("t1");
-		TestIdentifier failedTest = createTestIdentifier("t2");
-		TestIdentifier abortedTest = createTestIdentifier("t3");
-		TestIdentifier skippedTest = createTestIdentifier("t4");
+		var successfulTest = createTestIdentifier("t1");
+		var failedTest = createTestIdentifier("t2");
+		var abortedTest = createTestIdentifier("t3");
+		var skippedTest = createTestIdentifier("t4");
 
 		listener.testPlanExecutionStarted(testPlan);
 
@@ -105,7 +104,7 @@ class SummaryGenerationTests {
 
 		listener.testPlanExecutionFinished(testPlan);
 
-		String summaryString = summaryAsString();
+		var summaryString = summaryAsString();
 		try {
 			assertAll("summary", //
 				() -> assertTrue(summaryString.contains("4 containers found"), "containers found"), //
@@ -131,20 +130,20 @@ class SummaryGenerationTests {
 
 	@Test
 	void canGetListOfFailures() {
-		RuntimeException failedException = new RuntimeException("Pow!");
-		TestDescriptorStub testDescriptor = new TestDescriptorStub(UniqueId.root("root", "1"), "failingTest") {
+		var failedException = new RuntimeException("Pow!");
+		var testDescriptor = new TestDescriptorStub(UniqueId.root("root", "1"), "failingTest") {
 
 			@Override
 			public Optional<TestSource> getSource() {
 				return Optional.of(ClassSource.from(Object.class));
 			}
 		};
-		TestIdentifier failingTest = TestIdentifier.from(testDescriptor);
+		var failingTest = TestIdentifier.from(testDescriptor);
 		listener.testPlanExecutionStarted(testPlan);
 		listener.executionStarted(failingTest);
 		listener.executionFinished(failingTest, TestExecutionResult.failed(failedException));
 		listener.testPlanExecutionFinished(testPlan);
-		final List<TestExecutionSummary.Failure> failures = listener.getSummary().getFailures();
+		final var failures = listener.getSummary().getFailures();
 		assertThat(failures).hasSize(1);
 		assertThat(failures.get(0).getException()).isEqualTo(failedException);
 		assertThat(failures.get(0).getTestIdentifier()).isEqualTo(failingTest);
@@ -152,20 +151,20 @@ class SummaryGenerationTests {
 
 	@Test
 	void reportingCorrectFailures() {
-		IllegalArgumentException iaeCausedBy = new IllegalArgumentException("Illegal Argument Exception");
-		RuntimeException failedException = new RuntimeException("Runtime Exception", iaeCausedBy);
-		NullPointerException npeSuppressed = new NullPointerException("Null Pointer Exception");
+		var iaeCausedBy = new IllegalArgumentException("Illegal Argument Exception");
+		var failedException = new RuntimeException("Runtime Exception", iaeCausedBy);
+		var npeSuppressed = new NullPointerException("Null Pointer Exception");
 		failedException.addSuppressed(npeSuppressed);
 
-		TestDescriptorStub testDescriptor = new TestDescriptorStub(UniqueId.root("root", "2"), "failingTest") {
+		var testDescriptor = new TestDescriptorStub(UniqueId.root("root", "2"), "failingTest") {
 
 			@Override
 			public Optional<TestSource> getSource() {
 				return Optional.of(ClassSource.from(Object.class));
 			}
 		};
-		TestIdentifier failed = TestIdentifier.from(testDescriptor);
-		TestIdentifier aborted = TestIdentifier.from(new TestDescriptorStub(UniqueId.root("root", "3"), "abortedTest"));
+		var failed = TestIdentifier.from(testDescriptor);
+		var aborted = TestIdentifier.from(new TestDescriptorStub(UniqueId.root("root", "3"), "abortedTest"));
 
 		listener.testPlanExecutionStarted(testPlan);
 		listener.executionStarted(failed);
@@ -177,7 +176,7 @@ class SummaryGenerationTests {
 		// An aborted test is not a failure
 		assertEquals(1, listener.getSummary().getTestsFailedCount());
 
-		String failuresString = failuresAsString();
+		var failuresString = failuresAsString();
 		assertAll("failures", //
 			() -> assertTrue(failuresString.contains("Failures (1)"), "test failures"), //
 			() -> assertTrue(failuresString.contains(Object.class.getName()), "source"), //
@@ -190,20 +189,20 @@ class SummaryGenerationTests {
 
 	@Test
 	public void reportingCircularFailure() {
-		IllegalArgumentException iaeCausedBy = new IllegalArgumentException("Illegal Argument Exception");
-		RuntimeException failedException = new RuntimeException("Runtime Exception", iaeCausedBy);
-		NullPointerException npeSuppressed = new NullPointerException("Null Pointer Exception");
+		var iaeCausedBy = new IllegalArgumentException("Illegal Argument Exception");
+		var failedException = new RuntimeException("Runtime Exception", iaeCausedBy);
+		var npeSuppressed = new NullPointerException("Null Pointer Exception");
 		failedException.addSuppressed(npeSuppressed);
 		npeSuppressed.addSuppressed(iaeCausedBy);
 
-		TestDescriptorStub testDescriptor = new TestDescriptorStub(UniqueId.root("root", "2"), "failingTest") {
+		var testDescriptor = new TestDescriptorStub(UniqueId.root("root", "2"), "failingTest") {
 
 			@Override
 			public Optional<TestSource> getSource() {
 				return Optional.of(ClassSource.from(Object.class));
 			}
 		};
-		TestIdentifier failed = TestIdentifier.from(testDescriptor);
+		var failed = TestIdentifier.from(testDescriptor);
 
 		listener.testPlanExecutionStarted(testPlan);
 		listener.executionStarted(failed);
@@ -212,7 +211,7 @@ class SummaryGenerationTests {
 
 		assertEquals(1, listener.getSummary().getTestsFailedCount());
 
-		String failuresString = failuresAsString();
+		var failuresString = failuresAsString();
 		assertAll("failures", //
 			() -> assertTrue(failuresString.contains("Suppressed: " + npeSuppressed), "Suppressed exception"), //
 			() -> assertTrue(failuresString.contains("Circular reference: " + iaeCausedBy), "Circular reference"), //
@@ -223,34 +222,32 @@ class SummaryGenerationTests {
 
 	@SuppressWarnings("deprecation")
 	private TestIdentifier createTestIdentifier(String uniqueId) {
-		TestIdentifier identifier = TestIdentifier.from(
-			new TestDescriptorStub(UniqueId.root("test", uniqueId), uniqueId));
+		var identifier = TestIdentifier.from(new TestDescriptorStub(UniqueId.root("test", uniqueId), uniqueId));
 		testPlan.add(identifier);
 		return identifier;
 	}
 
 	@SuppressWarnings("deprecation")
 	private TestIdentifier createContainerIdentifier(String uniqueId) {
-		TestIdentifier identifier = TestIdentifier.from(
-			new TestDescriptorStub(UniqueId.root("container", uniqueId), uniqueId) {
+		var identifier = TestIdentifier.from(new TestDescriptorStub(UniqueId.root("container", uniqueId), uniqueId) {
 
-				@Override
-				public Type getType() {
-					return Type.CONTAINER;
-				}
-			});
+			@Override
+			public Type getType() {
+				return Type.CONTAINER;
+			}
+		});
 		testPlan.add(identifier);
 		return identifier;
 	}
 
 	private String summaryAsString() {
-		StringWriter summaryWriter = new StringWriter();
+		var summaryWriter = new StringWriter();
 		listener.getSummary().printTo(new PrintWriter(summaryWriter));
 		return summaryWriter.toString();
 	}
 
 	private String failuresAsString() {
-		StringWriter failuresWriter = new StringWriter();
+		var failuresWriter = new StringWriter();
 		listener.getSummary().printFailuresTo(new PrintWriter(failuresWriter));
 		return failuresWriter.toString();
 	}
