@@ -10,9 +10,6 @@
 
 package org.junit.platform.reporting.legacy.xml;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.Collections.emptySet;
-import static java.util.Collections.singleton;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -38,6 +35,7 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestReporter;
@@ -46,10 +44,8 @@ import org.junit.platform.engine.TestEngine;
 import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.reporting.ReportEntry;
 import org.junit.platform.engine.support.descriptor.EngineDescriptor;
-import org.junit.platform.engine.support.hierarchical.DemoHierarchicalTestDescriptor;
 import org.junit.platform.engine.support.hierarchical.DemoHierarchicalTestEngine;
 import org.junit.platform.fakes.TestDescriptorStub;
-import org.junit.platform.launcher.Launcher;
 import org.junit.platform.launcher.TestIdentifier;
 import org.junit.platform.launcher.TestPlan;
 import org.opentest4j.AssertionFailedError;
@@ -63,13 +59,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSingleSucceedingTest(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("succeedingTest", "display<-->Name 😎", () -> {
 		});
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -96,12 +92,12 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSingleFailingTest(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("failingTest", () -> fail("expected to <b>fail</b>"));
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -121,14 +117,14 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSingleErroneousTest(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("failingTest", () -> {
 			throw new RuntimeException("error occurred");
 		});
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -148,13 +144,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSingleSkippedTest(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
-		DemoHierarchicalTestDescriptor testDescriptor = engine.addTest("skippedTest", () -> fail("never called"));
+		var engine = new DemoHierarchicalTestEngine("dummy");
+		var testDescriptor = engine.addTest("skippedTest", () -> fail("never called"));
 		testDescriptor.markSkipped("should be skipped");
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -173,12 +169,12 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSingleAbortedTest(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("abortedTest", () -> assumeFalse(true, "deliberately aborted"));
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -199,7 +195,7 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void measuresTimesInSeconds(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("firstTest", () -> {
 		});
 		engine.addTest("secondTest", () -> {
@@ -207,7 +203,7 @@ class LegacyXmlReportGeneratingListenerTests {
 
 		executeTests(engine, tempDirectory, new IncrementingClock(0, Duration.ofMillis(333)));
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		//               start        end
@@ -225,13 +221,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void testWithImmeasurableTimeIsOutputCorrectly(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("test", () -> {
 		});
 
 		executeTests(engine, tempDirectory, Clock.fixed(Instant.EPOCH, ZoneId.systemDefault()));
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -243,13 +239,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForSkippedContainer(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("test", () -> fail("never called"));
 		engine.getEngineDescriptor().markSkipped("should be skipped");
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -266,13 +262,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesFileForFailingContainer(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("test", () -> fail("never called"));
 		engine.getEngineDescriptor().setBeforeAllBehavior(() -> fail("failure before all tests"));
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -290,13 +286,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesSystemProperties(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("test", () -> {
 		});
 
 		executeTests(engine, tempDirectory);
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -313,16 +309,16 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void writesHostNameAndTimestamp(@TempDir Path tempDirectory) throws Exception {
-		DemoHierarchicalTestEngine engine = new DemoHierarchicalTestEngine("dummy");
+		var engine = new DemoHierarchicalTestEngine("dummy");
 		engine.addTest("test", () -> {
 		});
 
-		LocalDateTime now = LocalDateTime.parse("2016-01-28T14:02:59.123");
-		ZoneId zone = ZoneId.systemDefault();
+		var now = LocalDateTime.parse("2016-01-28T14:02:59.123");
+		var zone = ZoneId.systemDefault();
 
 		executeTests(engine, tempDirectory, Clock.fixed(ZonedDateTime.of(now, zone).toInstant(), zone));
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-dummy.xml"));
 
 		// @formatter:off
 		assertThat(content)
@@ -337,14 +333,13 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void printsExceptionWhenReportsDirCannotBeCreated(@TempDir Path tempDirectory) throws Exception {
-		Path reportsDir = tempDirectory.resolve("dummy.txt");
-		Files.write(reportsDir, singleton("content"));
+		var reportsDir = tempDirectory.resolve("dummy.txt");
+		Files.write(reportsDir, Set.of("content"));
 
-		StringWriter out = new StringWriter();
-		LegacyXmlReportGeneratingListener listener = new LegacyXmlReportGeneratingListener(reportsDir,
-			new PrintWriter(out));
+		var out = new StringWriter();
+		var listener = new LegacyXmlReportGeneratingListener(reportsDir, new PrintWriter(out));
 
-		listener.testPlanExecutionStarted(TestPlan.from(emptySet()));
+		listener.testPlanExecutionStarted(TestPlan.from(Set.of()));
 
 		assertThat(out.toString()).containsSubsequence("Could not create reports directory",
 			"FileAlreadyExistsException", "at ");
@@ -352,16 +347,15 @@ class LegacyXmlReportGeneratingListenerTests {
 
 	@Test
 	void printsExceptionWhenReportCouldNotBeWritten(@TempDir Path tempDirectory) throws Exception {
-		EngineDescriptor engineDescriptor = new EngineDescriptor(UniqueId.forEngine("engine"), "Engine");
+		var engineDescriptor = new EngineDescriptor(UniqueId.forEngine("engine"), "Engine");
 
-		Path xmlFile = tempDirectory.resolve("TEST-engine.xml");
+		var xmlFile = tempDirectory.resolve("TEST-engine.xml");
 		Files.createDirectories(xmlFile);
 
-		StringWriter out = new StringWriter();
-		LegacyXmlReportGeneratingListener listener = new LegacyXmlReportGeneratingListener(tempDirectory,
-			new PrintWriter(out));
+		var out = new StringWriter();
+		var listener = new LegacyXmlReportGeneratingListener(tempDirectory, new PrintWriter(out));
 
-		listener.testPlanExecutionStarted(TestPlan.from(singleton(engineDescriptor)));
+		listener.testPlanExecutionStarted(TestPlan.from(Set.of(engineDescriptor)));
 		listener.executionFinished(TestIdentifier.from(engineDescriptor), successful());
 
 		assertThat(out.toString()).containsSubsequence("Could not write XML report", "Exception", "at ");
@@ -370,16 +364,15 @@ class LegacyXmlReportGeneratingListenerTests {
 	@Test
 	void writesReportEntriesToSystemOutElement(@TempDir Path tempDirectory, TestReporter testReporter)
 			throws Exception {
-		EngineDescriptor engineDescriptor = new EngineDescriptor(UniqueId.forEngine("engine"), "Engine");
+		var engineDescriptor = new EngineDescriptor(UniqueId.forEngine("engine"), "Engine");
 		engineDescriptor.addChild(new TestDescriptorStub(UniqueId.root("child", "test"), "test"));
-		TestPlan testPlan = TestPlan.from(singleton(engineDescriptor));
+		var testPlan = TestPlan.from(Set.of(engineDescriptor));
 
-		StringWriter out = new StringWriter();
-		LegacyXmlReportGeneratingListener listener = new LegacyXmlReportGeneratingListener(tempDirectory,
-			new PrintWriter(out));
+		var out = new StringWriter();
+		var listener = new LegacyXmlReportGeneratingListener(tempDirectory, new PrintWriter(out));
 
 		listener.testPlanExecutionStarted(testPlan);
-		TestIdentifier testIdentifier = testPlan.getTestIdentifier("[child:test]");
+		var testIdentifier = testPlan.getTestIdentifier("[child:test]");
 		listener.executionStarted(testIdentifier);
 		listener.reportingEntryPublished(testIdentifier, ReportEntry.from("foo", "bar"));
 		Map<String, String> map = new LinkedHashMap<>();
@@ -389,7 +382,7 @@ class LegacyXmlReportGeneratingListenerTests {
 		listener.executionFinished(testIdentifier, successful());
 		listener.executionFinished(testPlan.getTestIdentifier("[engine:engine]"), successful());
 
-		String content = readValidXmlFile(tempDirectory.resolve("TEST-engine.xml"));
+		var content = readValidXmlFile(tempDirectory.resolve("TEST-engine.xml"));
 		//testReporter.publishEntry("xml", content);
 
 		// @formatter:off
@@ -414,17 +407,16 @@ class LegacyXmlReportGeneratingListenerTests {
 	}
 
 	private void executeTests(TestEngine engine, Path tempDirectory, Clock clock) {
-		PrintWriter out = new PrintWriter(new StringWriter());
-		LegacyXmlReportGeneratingListener reportListener = new LegacyXmlReportGeneratingListener(
-			tempDirectory.toString(), out, clock);
-		Launcher launcher = createLauncher(engine);
+		var out = new PrintWriter(new StringWriter());
+		var reportListener = new LegacyXmlReportGeneratingListener(tempDirectory.toString(), out, clock);
+		var launcher = createLauncher(engine);
 		launcher.registerTestExecutionListeners(reportListener);
 		launcher.execute(request().selectors(selectUniqueId(UniqueId.forEngine(engine.getId()))).build());
 	}
 
 	private String readValidXmlFile(Path xmlFile) throws Exception {
 		assertTrue(Files.exists(xmlFile), () -> "File does not exist: " + xmlFile);
-		String content = new String(Files.readAllBytes(xmlFile), UTF_8);
+		var content = Files.readString(xmlFile);
 		assertValidAccordingToJenkinsSchema(content);
 		return content;
 	}
